Fixed service worker, A11Y, and responsive layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ nav img {
   min-width: 100%;
 }
 
-#restaurants-list li h1 {
+#restaurants-list li h3 {
   color: #f18200;
   font-family: "Oswald", Arial, sans-serif;
   font-size: 1rem;
